fix bug where screen was longer than it should have been on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ body {
 /* Game area */
 .fighter-selection-title {
     margin-bottom: 0;
-    margin-top: 30px;
+    margin-top: 25px;
     font-size: 130%;
     color: #9e9e9e;
     text-align: center;
